#350873 fix css alignment issue on certain fonts

--- a/content-elements/base/slot-finder/src/slot/_slot.scss
+++ b/content-elements/base/slot-finder/src/slot/_slot.scss
@@ -68,6 +68,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--default-gap);
+    width: 100px;
 
     &:hover {
       background: rgba(0, 0, 0, 0.08);
